# welp

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
editables/: bg.xcf  character.xcf  character_sprites.xcf
include/: administrador_tuberia.hpp  entidad.hpp  juego.hpp  pantalla.hpp  personaje.hpp  propiedades.hpp  rng.hpp  tuberia.hpp
src/: administrador_tuberia.cpp  entidad.cpp  juego.cpp  main.cpp  pantalla.cpp  personaje.cpp  propiedades.cpp  rng.cpp  tuberia.cpp
